@@ -12,6 +12,11 @@ influences from my experiences with the former kwm.
 
 In 0.10:
 --------
+  patchlevel 14:
+       - new keybindings Control-F[1..8] for virtual desktop switching
+       - new option "ControlTab=[on,off]" to switch off the Control-Tab
+         shortcut.
+
   patchlevel 13:
        - new decoration style (tiny decoration). Useful for floating
          menu- or toolbars. Can be set via KWM::setDecoration(...)
